<?xml version="1.0" encoding="utf-8"?>


<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <!-- APP -->
    <string name="app_name">Protect Photos</string>
    <string name="file_provider_authority" translatable="false">ggsoftware.com.br.protegefotos.fileprovider</string>


    <!-- Titulos -->

    <string name="title_activity_escolher_pasta">My folders</string>
    <string name="title_alterar_dados_pasta">Change folder data</string>
    <string name="title_criar_nova_pasta">Criar nova pasta</string>
    <string name="title_criar_nova_pasta_informacoes">What is an invisible folder?</string>
    <string name="title_activity_galeria">Create new folder</string>
    <string name="title_alterar_nome_pasta">Change Folder Name</string>
    <!-- Botões -->


    <string name="btn_cancelar">Cancel</string>
    <string name="btn_criar_pasta">Create folder</string>
    <string name="btn_alterar_senha">Change Password</string>
    <string name="btn_cancelar_selecao">Cancel Selection</string>
    <string name="btn_novas_fotos">Protect new photos</string>
    <string name="btn_alterar_nome_pasta">Change Folder Name</string>
    <string name="btn_excluir_pasta">Delete Folder</string>
    <string name="btn_entendi">Got it</string>
    <string name="btn_selecionar_todos">Select all</string>
    <string name="btn_exportar">Export</string>
    <string name="btn_excluir">Delete</string>
    <string name="btn_configurar_pasta">Set up folder</string>
    <string name="btn_alterar_dados_pasta">Change folder data</string>
    <string name="btn_criar_primeira_pasta">Create my first folder</string>


    <string name="btn_rdb_visivel">Visible</string>
    <string name="btn_rdb_invisivel">Invisible</string>
<!-- Mensagens  -->

    <string name="msg_erro_criar_pasta">Error creating folder, contact developer.</string>
    <string name="msg_erro_alterar_senha">Error changing password, contact developer.</string>
    <string name="msg_sucesso_criar_pasta">Successfully created folder</string>
    <string name="msg_sucesso_alterar_senha">Password changed successfully</string>
    <string name="msg_confirmar_padrao">Draw pattern to access folder %1$s</string>
    <string name="msg_padrao_alterar">Create a new pattern for the %1$s folder.</string>
    <string name="msg_pasta_repetida">You already have a folder with that name</string>
    <string name="msg_pasta_nao_existe">Folder could not be found</string>
    <string name="msg_sucesso_alterar_nome_pasta">Folder data changed successfully</string>
    <string name="msg_sucesso_deletar_pasta">Folder deleted successfully</string>
    <string name="msg_pastas_iguais">Choose the desired folder</string>
    <string name="msg_erro_criar_pasta_sem_nome">Please enter the name of your folder.</string>
    <string name="msg_download_sucesso">Photos copied to Downloads folder</string>
    <string name="msg_download_sucesso_2">Photos copied to Downloads/%1$s  folder</string>
    <string name="msg_download_erro">Error exporting photos</string>
    <string name="msg_sucesso_deletar_foto">Foto deletada</string>
    <string name="msg_excluir_pasta">Are you sure you want to delete the %1$s folder and all photos from it?</string>
    <string name="msg_title_excluir_fotos">Delete photos</string>
    <string name="msg_excluir_fotos">Are you sure you want to delete the %1$s selected photos?</string>
    <string name="msg_excluir_fotos_sucesso">Photos deleted successfully</string>
    <string name="msg_title_exportar_foto">Export photo</string>
    <string name="msg_exportar_fotos">Do you want to export the %1$s selected photos to your phone? They will no longer be protected.</string>
    <string name="msg_exportar_foto">Want to export the %1$s photo to your phone. It will no longer be protected</string>
    <string name="msg_excluir_foto">Are you sure you want to delete the  %1$s photo?</string>
    <string name="msg_title_proteger_fotos">Protecting your photos</string>
    <string name="msg_proteger_fotos">We are protecting your photos</string>
    <string name="msg_confirmar_padrao_invisivel">Draw the pattern of the folder you want to access</string>
    <string name="msg_title_exportar_fotos">Export photos</string>
    <string name="msg_title_excluir_pasta">Delete Folder</string>
    <string name="msg_pasta_sem_fotos">You do not have any photos in this folder</string>
    <string name="msg_arquivos_nao_selecionados">Select photos first</string>



    <!-- Frases Pattern -->

    <string name="pl_cancel">Cancel</string>
    <string name="pl_confirm">Confirm</string>
    <string name="pl_confirm_pattern">Draw the pattern again to confirm</string>
    <string name="pl_continue">Continue</string>
    <string name="pl_draw_pattern_to_unlock">Draw pattern to unlock</string>
    <string name="pl_pattern_confirmed">New pattern successfully recorded</string>
    <string name="pl_pattern_recorded">Pattern recorded</string>
    <string name="pl_pattern_too_short">Connect at least %d points, try again</string>
    <string name="pl_recording_pattern">Release finger when done</string>
    <string name="pl_redraw">Draw again</string>
    <string name="pl_wrong_pattern">Incorrect pattern, please try again.</string>
    <string name="pl_access_pattern_start">Pattern started</string>
    <string name="pl_access_pattern_cleared">Pattern cleared</string>
    <string name="pl_access_pattern_cell_added">Cell added</string>
    <string name="pl_access_pattern_cell_added_verbose">Cell <xliff:g example="3" id="cell_index">%1$d</xliff:g> added</string>
    <string name="pl_access_pattern_detected">Pattern completed</string>
    <string name="pl_access_pattern_area">Pattern area.</string>
    <string name="pl_draw_pattern">Create a pattern for the %1$s folder</string>
    <string name="pl_forgot_pattern">I forgot pattern</string>



    <!-- ACTIONS -->
    <string name="action_settings">Settings</string>
    <string name="action_nova_pasta">New folder</string>


    <!-- TEXTOS -->

    <string name="txt_informe_nome_pasta">What will be the name of your folder?</string>
    <string name="txt_informe_nome_novo_pasta">Informe o novo nome da pasta</string>
    <string name="txt_protegendo_fotos">When you import photos into the app, they will NOT be deleted from their source location. For added security, keep the photos you want to protect in the app only. You can export them back to your cell phone at any time.</string>
    <string name="txt_pergunta_invisivel">What is an invisible folder?</string>
    <string name="txt_pasta_invisivel">An invisible folder does not appear in your folder list. To open it you can select any visible folder and make the pattern of the invisible folder. If all your folders are invisible, the first screen of the application will already ask for the password of the folder you want to access, without showing the list of available folders. This gives you more privacy about which folders you are protecting.</string>
    <string name="txt_msg_demorar">This may take a while</string>
    <string name="txt_visibilidade_pasta">What will be the visibility of the folder?</string>
    <string name="txt_pasta_principal">Main</string>
    <string name="txt_alterar_senha_pasta">Change %1$s Folder Password</string>
    <string name="txt_sem_pastas">Welcome to Protect Photos. You can create multiple folders to store your photos securely, isolated from the rest of your phone. Press the button below to create your first folder.</string>

</resources>
